# axis

./: .gitignore  README.md  bench.py  graph_probe.py  modal_1b.py  modal_batch_sweep.py  modal_benchmark.py  modal_cupy_gpu.py  modal_finetune_demo.py  modal_fp16.py  modal_gpu_test.py  modal_gradckpt.py  modal_llama_parity.py  modal_parity_big.py  modal_precision.py  modal_scale.py  modal_scale_tokens.py  profile_a100.py  pyproject.toml  resident_bench.py  validate_wmma.py
.benchmarks/: axis_vs_pytorch_7b.html
axis/: __init__.py  _build.py  backend.py  checkpoint.py  cli.py  compile.py  data.py  engine.py  generate.py  gradcheck.py  lora.py  nn.py  ops.py  optim.py  pretrained.py  tensor.py  tokenizer.py
axis/accel/: __init__.py  attention.py  batched_tiled.py  kernels.py  matmul_naive.py  softmax.py  tiled.py  wmma.py
engine/: hip_compat.h  modal_7b_bench.py  modal_amd_probe.py  modal_bf16_test.py  modal_block_test.py  modal_compare_test.py  modal_compile_test.py  modal_ddp_test.py  modal_harden_test.py  modal_hip_build.py  modal_longseq_test.py  modal_lora_test.py  modal_probe.py  modal_runtime_test.py  modal_step_test.py  modal_stream_test.py  modal_trainfix_test.py  modal_zero_test.py  probe_graph.cu  runtime.cu
tests/: test_accel_parity.py  test_data.py  test_fp16.py  test_fused_norm_rope.py  test_fused_ops.py  test_generate_accum.py  test_gqa.py  test_grad_checkpoint.py  test_lora.py  test_nn_training.py  test_ops_gradcheck.py  test_pretrained.py  test_tiled_kernels.py  test_tokenizer.py
