[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "axis-ml"
version = "0.12.0"
description = "Axis — India's first proprietary AI training & fine-tuning framework, by Zyora Labs"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Proprietary" }
authors = [{ name = "Vasanth", email = "vasu@zyoralabs.com" }]
maintainers = [{ name = "Zyora Labs", email = "vasu@zyoralabs.com" }]
keywords = [
  "deep-learning", "transformers", "training", "fine-tuning",
  "autograd", "llm", "machine-learning",
]
dependencies = ["numpy>=1.24"]

[project.optional-dependencies]
dev = ["pytest>=7.0"]
hf = ["regex"]  # real HuggingFace byte-level BPE tokenizer (axis.tokenizer)

[project.urls]
Homepage = "https://zyoralabs.com"
Repository = "https://github.com/Zyora-Dev/axis"

[tool.setuptools.packages.find]
include = ["axis*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
